@@ -1,12 +1,12 @@
 Package: gCMAP
 Type: Package
 Title: Tools for Connectivity Map-like analyses
-Version: 1.3.3
-Date: 2013-2-20
+Version: 1.3.4
+Date: 2013-03-07
 Depends: GSEABase, DESeq, limma (>= 3.15.14)
 Imports: Biobase, BiocGenerics, methods, GSEAlm, Category, bigmemory, bigmemoryExtras (>=
         1.1.2), Matrix (>= 1.0.9), parallel, annotate, genefilter, AnnotationDbi
-Suggests: KEGG.db, reactome.db, RUnit, reshape, lattice, GO.db, mgsa
+Suggests: KEGG.db, reactome.db, RUnit, GO.db, mgsa
 Author: Thomas Sandmann <sandmann.thomas@gene.com>, Richard Bourgon
 	<bourgon.richard@gene.com> and Sarah Kummerfeld
 	<kummerfeld.sarah@gene.com>
