@@ -8,7 +8,6 @@ importFrom("genefilter", "rowttests")
 
 export("annotate_eset_list",
        "center_eSet",
-       "cmapQAPlot",
        "eSetOnDisk",
        "generate_gCMAP_NChannelSet",
        "eset_instances",
