@@ -1525,102 +1525,3 @@ go2cmap <- function( annotation.package="org.Hs.eg.db", ontology="BP", evidence=
   experimentData( go.cmap)@abstract <- sprintf( "%s categories from the GO %s ontology", ncol( go.cmap), ontology)
   return( go.cmap )
 }
-
-cmapQAPlot <- function(result.list,
-                       score.thresholds=c(5,10,15,20),
-                       y.threshold=0.05){
-  
-  fractionMatched <- function( result.list,
-                               score.thresholds
-  ){
-    set.ids <- as.character( set( result.list[[1]]))
-    scores <-sapply( result.list, function(x) {
-      effect( x )[set.ids]
-    })
-    
-    passes.score.cutoff <- sapply( score.thresholds, function(s){
-      apply( abs( scores ) > s, 1, sum)
-    })
-    
-    fraction.matched <- passes.score.cutoff / length( result.list)
-    colnames( fraction.matched ) <- score.thresholds
-    return( fraction.matched )
-  }
-  
-  plotFractions <- function( fraction.matched,
-                             score.thresholds,
-                             main="",
-                             alpha=125){
-    my.colors <- rainbow(length( score.thresholds))
-    my.colors <- apply( col2rgb( my.colors), 2, function(x){
-      rgb( x[1], x[2], x[3], alpha=alpha, maxColorValue=255)
-    })
-    
-    plot( sort( fraction.matched[,1], decreasing=TRUE),
-          ylab="Fraction of queries matched",
-          ylim=c(0,1),
-          pch=20,
-          cex=0.5,
-          col=my.colors[1],
-          main=main)
-    if( length( score.thresholds ) > 1){
-      for( n in 2:length( score.thresholds)){
-        points( sort( fraction.matched[,n], decreasing=TRUE),
-                pch=20,
-                cex=0.5,
-                col=my.colors[n])
-      }
-    }
-    if( !is.null( y.threshold )){
-      abline(h=y.threshold, lty=2)
-    }
-    legend("topright", title="Score cutoff",
-           legend=score.thresholds, fill=my.colors)
-  }
-  
-  ## load query dataset & induce gene sets
-  if( !inherits( result.list, "list")){
-    stop("Please provide a list of CMAPResult objects as 'result.list'")
-  }
-  
-  if( !all( sapply( result.list, class ) == "CMAPResults")){
-    stop("Please provide a list of CMAPResult objects as 'result.list'")
-  }
-  
-  fraction.matched <- fractionMatched( result.list, score.thresholds )
-  plotFractions( fraction.matched, score.thresholds,
-                 main="Fraction of matched queries")
-  return( fraction.matched[order( row.names( fraction.matched)),] )
-}
-
-filterCMAP <- function(query.cmap,
-                       test.cmap,
-                       max.fraction =  0.1,
-                       score.threshold  = 10,
-                       min.set.size = 10,
-                       max.set.size = 500,
-                       z.threshold = 3,
-                       element = "z"){
-
-  if( inherits( query.cmap, "CMAPCollection")){
-    query.sets <- query.cmap
-  } else {
-    if( inherits( query.cmap, "eSet")){
-      query.sets <- induceCMAPCollection( query.cmap, lower=-z.threshold, higher=z.threshold, element=element)
-    } else {
-      stop("query.cmap must be an NChannelSet or a CMAPCollection")
-    }
-  } 
-
-  query.sizes <- setSizes( query.sets )[,"n.total"]
-  query.sets <- query.sets[,query.sizes > min.set.size & query.sizes < max.set.size]
-  
-  options( mc.cores = 1 )
-  res.list <- gsealm_jg_score( query.sets,
-                              test.cmap,
-                              element=element
-                              )
-  fraction.matched <- cmapQAPlot( res.list, score.thresholds=score.threshold )
-  keep.instances <- names( fraction.matched )[ fraction.matched < max.fraction ] 
-  return( test.cmap[, keep.instances] )
-}  
